
package cpit.pkg252;

public interface PaymentStrategy {
    void pay(double amount);
}
